Added lomboc dependency

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,13 @@ dependencies {
 //подтягивает методы. Основа на кот пишется тест
     implementation group: 'org.testng', name: 'testng', version: '7.1.0' //подтягивает методы,которых нет в селениуме
     implementation 'com.github.javafaker:javafaker:1.0.2'  // будет делать рандомные данные
+    implementation group: 'com.fasterxml.uuid', name: 'java-uuid-generator', version: '3.1.0'
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.1'
+    testImplementation 'org.projectlombok:lombok:1.18.22'
+    testImplementation 'org.projectlombok:lombok:1.18.22'
+    testImplementation 'org.projectlombok:lombok:1.18.22'
+// для серелизации, вспомогательная библиотека для рест ашурид
 }
 
 test {
