--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     testImplementation 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.projectlombok:lombok:1.18.22'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha8'
 // для серелизации, вспомогательная библиотека для рест ашурид
 }
 
