--- a/build.gradle
+++ b/build.gradle
@@ -1,67 +1,33 @@
 plugins {
     id 'java'
-    id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
-    id 'org.beryx.jlink' version '2.25.0'
 }
 
-group 'com.example'
+group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
-ext {
-    junitVersion = '5.8.2'
-}
-
-sourceCompatibility = '17'
-targetCompatibility = '17'
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-application {
-    mainModule = 'com.example.phonebook'
-    mainClass = 'com.example.phonebook.HelloApplication'
-}
-
-javafx {
-    version = '17.0.2'
-    modules = ['javafx.controls', 'javafx.fxml']
-}
-
 dependencies {
-
-    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.3.1'  // подтягивает драйверы
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.3.1'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
-//подтягивает методы. Основа на кот пишется тест
-    implementation group: 'org.testng', name: 'testng', version: '7.1.0' //подтягивает методы,которых нет в селениуме
-    implementation 'com.github.javafaker:javafaker:1.0.2'  // будет делать рандомные данные
+    implementation group: 'org.testng', name: 'testng', version: '7.1.0'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha8'
     implementation group: 'com.fasterxml.uuid', name: 'java-uuid-generator', version: '3.1.0'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.3.0'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.1'
     testImplementation 'org.projectlombok:lombok:1.18.22'
-    testImplementation 'org.projectlombok:lombok:1.18.22'
-    testImplementation 'org.projectlombok:lombok:1.18.22'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha8'
-// для серелизации, вспомогательная библиотека для рест ашурид
+    implementation group: 'com.github.stephenc.monte', name: 'monte-screen-recorder', version: '0.7.7.0'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
 
-jlink {
-    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'app'
+task testUser(type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/testngSmoke.xml'
     }
-}
-
-jlinkZip {
-    group = 'distribution'
 }
